...
        android:layout_height="wrap_content"
        android:textColor="@color/brand_teal"
        android:textSize="48sp"
        android:fontFamily="monospace"
        android:text="---"
        android:contentDescription="@string/heading_content_description"
        app:layout_constraintBottom_toTopOf="@id/northLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/northLabel"
        android:layout_width="wrap_content"
...
